[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "reusable-actions"
version = "0.0.6.post3"
description = "A project template to use for new Python Github repositories with best practices."
authors = [ "Azat <8280770+azataiot@users.noreply.github.com>",]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/azataiot/reuseable-actions"

[tool.bandit]
exclude_dirs = [ "tests",]
tests = [ "B201", "B301",]
skips = [ "B101", "B601",]

[tool.bump-version]
dry-run = false
commit = true
tag = true

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
isort = "^5.12.0"
pytest = "^7.4.2"
flake8 = "^7.0.0"
bump-version-pep440 = "^0.0.4.post1"
